import java.text.SimpleDateFormat

buildscript {
    repositories {
        maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
        maven { url = 'https://maven.aliyun.com/repository/public/' }
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://repo.spongepowered.org/maven/' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.24'
        classpath 'org.spongepowered:mixingradle:0.7.38'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

configurations.configureEach {
    resolutionStrategy.cacheDynamicVersionsFor 99999, 'days'
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

def getDynamicVersion() {
    def useAuto = project.findProperty('use_auto_version')?.toString() ?: 'false'
    if (useAuto.toBoolean()) {
        return new SimpleDateFormat('yy.M.d').format(new Date())
    }
    return project.findProperty('mod_version')?.toString() ?: '0.0.0'
}

def pVersion = getDynamicVersion()
def pGroup = project.findProperty('mod_group_id')?.toString() ?: 'dev.xyat.adventuresystems'
def pModId = project.findProperty('mod_id')?.toString() ?: 'adventuresystems'
def primaryInternalModId = 'adventuresystems'
def localLibsDir = file(project.findProperty('local_libs_dir') ?: 'D:/IDEA_Caches/libs')
def kineticCoreLibsDir = file(project.findProperty('kineticcore_libs_dir') ?: 'D:/IDEA_Caches/libs')
def mixinConfigList = ['adventuresystems.curios.mixins.json', 'adventuresystems.ftb.mixins.json']

version = pVersion
group = pGroup

base {
    archivesName.set(pModId)
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: project.findProperty('mapping_channel')?.toString() ?: 'official', version: project.findProperty('mapping_version')?.toString()
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            mods {
                "${primaryInternalModId}" {
                    source sourceSets.main
                }
            }
        }

        client {
            mixinConfigList.each { configName -> args "-mixin.config=${configName}" }
        }

        server {
            args '--nogui'
            mixinConfigList.each { configName -> args "-mixin.config=${configName}" }
        }
    }
}

mixin {
    add sourceSets.main, "${pModId}.mixins.refmap.json"
    mixinConfigList.each { configName -> config configName }
    defaultObfuscationEnv 'searge'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
    maven { url = 'https://maven.aliyun.com/repository/public/' }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url = 'https://maven.blamejared.com' }
    mavenCentral()

    flatDir { dirs kineticCoreLibsDir }
    flatDir { dirs localLibsDir }
}

def kineticCoreMod = { File libsDir ->
    if (!libsDir.exists() || !libsDir.isDirectory()) {
        throw new GradleException("KineticCore libs directory does not exist: ${libsDir.absolutePath}")
    }
    File[] jars = libsDir.listFiles()
    if (jars == null) {
        throw new GradleException("Cannot read KineticCore libs directory: ${libsDir.absolutePath}")
    }

    String fileNamePrefix = 'kineticcore-'
    def matches = jars.findAll { File candidate ->
        candidate.isFile()
                && candidate.name.toLowerCase().endsWith('.jar')
                && candidate.name.regionMatches(true, 0, fileNamePrefix, 0, fileNamePrefix.length())
    }
    if (matches.isEmpty()) {
        throw new GradleException(
                "Cannot find a JAR starting with '${fileNamePrefix}' in ${libsDir.absolutePath}"
        )
    }
    if (matches.size() > 1) {
        throw new GradleException(
                "Multiple KineticCore JARs starting with '${fileNamePrefix}' were found in ${libsDir.absolutePath}: " +
                        matches.collect { it.name }.sort().join(', ')
        )
    }

    File selected = matches[0]
    String selectedVersion = selected.name.substring(fileNamePrefix.length(), selected.name.length() - 4)
    if (selectedVersion.isBlank()) {
        throw new GradleException("Cannot determine KineticCore version from ${selected.name}")
    }
    return "blank:kineticcore:${selectedVersion}"
}
def localMod = { String artifactName ->
    File libsDir = localLibsDir
    if (!libsDir.exists() || !libsDir.isDirectory()) {
        throw new GradleException("Local libs directory does not exist: ${libsDir.absolutePath}")
    }
    File[] jars = libsDir.listFiles()
    if (jars == null) {
        throw new GradleException("Cannot read local libs directory: ${libsDir.absolutePath}")
    }
    String exactName = "${artifactName}.jar"
    String versionPrefix = "${artifactName}-"
    File exactMatch = jars.find { File candidate ->
        candidate.isFile() && candidate.name.equalsIgnoreCase(exactName)
    }
    if (exactMatch != null) {
        return "blank:${artifactName}:local"
    }
    def matches = jars.findAll { File candidate ->
        candidate.isFile()
                && candidate.name.toLowerCase().endsWith('.jar')
                && candidate.name.regionMatches(true, 0, versionPrefix, 0, versionPrefix.length())
    }
    if (matches.isEmpty()) {
        throw new GradleException("Cannot find local mod '${artifactName}' in ${libsDir.absolutePath}")
    }
    if (matches.size() > 1) {
        throw new GradleException("Multiple versions found for '${artifactName}': ${matches.collect { it.name }.join(', ')}")
    }
    File selected = matches[0]
    String version = selected.name.substring(versionPrefix.length(), selected.name.length() - 4)
    if (version.isBlank()) {
        throw new GradleException("Cannot determine local mod version from ${selected.name}")
    }
    return "blank:${artifactName}:${version}"
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.findProperty('minecraft_version')?.toString()}-${project.findProperty('forge_version')?.toString()}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation fg.deobf(localMod('curios'))
    implementation fg.deobf(localMod('refinedstorage'))
    implementation fg.deobf(localMod('sophisticatedcore'))
    implementation fg.deobf(localMod('sophisticatedbackpacks'))
    implementation(fg.deobf(kineticCoreMod(kineticCoreLibsDir))) {
        changing = true
    }
    implementation fg.deobf(localMod('architectury-forge'))
    implementation fg.deobf(localMod('ftb-library'))
    implementation fg.deobf(localMod('ftb-quests'))
    implementation fg.deobf(localMod('ftb-teams'))
    implementation fg.deobf(localMod('jei'))
}

tasks.named('jar', Jar).configure {
    def customOutputDir = project.findProperty('output_mods_dir')
    if (customOutputDir) {
        destinationDirectory = file(customOutputDir)
    }
    archiveFileName.set("${pModId}-${project.version}.jar")

    manifest {
        attributes([
                'Specification-Title'     : pModId,
                'Specification-Vendor'    : project.findProperty('mod_authors')?.toString() ?: 'Unknown',
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : pVersion,
                'Implementation-Vendor'   : project.findProperty('mod_authors')?.toString() ?: 'Unknown',
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'            : mixinConfigList.join(',')
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.register('runClientIDE') {
    group = 'build'
    description = 'Start Forge development client'
    dependsOn 'runClient'
}

tasks.register('runServerIDE') {
    group = 'build'
    description = 'Start Forge development server'
    dependsOn 'runServer'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll([
            '-nowarn',
            '-Xlint:none',
            '-Amixin.target.allowUnresolvedTarget=true',
            '-Amixin.suppressTargetWarnings=true'
    ])
}

tasks.named('compileJava', JavaCompile).configure {
    outputs.upToDateWhen { false }
}
